gitops/apps/mongodb/mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  labels:
    app.kubernetes.io/name: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mongo-express
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mongo-express
    spec:
      nodeSelector:
        capability.isma.dev/stable: "true"
      containers:
        - name: mongo-express
          image: mongo-express:1.0.2-20-alpine3.19
          ports:
            - name: http
              containerPort: 8081
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  labels:
    app.kubernetes.io/name: mongo-express
spec:
  selector:
    app.kubernetes.io/name: mongo-express
  ports:
    - name: http
      port: 80
      targetPort: http
