gitops/apps/mongodb/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-headless
  labels:
    app.kubernetes.io/name: mongodb
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: mongodb
  ports:
    - name: mongodb
      port: 27017
      targetPort: mongodb
