gitops/apps/mongodb/mongo-express-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mongo-express-cloudflare
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik
      namespace: gateway-system
  hostnames:
    - "mongo-express.ismola.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: mongo-express
          port: 80
          weight: 1
