gitops/apps/mongodb/mongo-express-ingress-cloudflare.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-cloudflare
spec:
  ingressClassName: traefik
  rules:
    - host: mongo-express.ismola.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo-express
                port:
                  number: 80
