gitops/apps/mongodb/mongo-express-ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-tailnet
  annotations:
    tailscale.com/proxy-class: stable-proxies
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: mongo-express
      port:
        number: 80
  tls:
    - hosts:
        - mongo-express
